TBD - 0.2
- Initial fork changes
- Changed Logging format (Time + severity + context)
- Added Application singleton
- GUI Tweaking
   - Changed Tab-key behaviour
   - DXC Widget
   - manu others
- DXCCInfo is clean correctly when callsign is reset
- Password are stored in a Secure Storage
- Changed sorting criteria for BandFilter Combobox [Logbook View]
- Added DXCluster Filters - Context Menu of the DXC
- DXCluster spot time in UTC
- Changed Style for Enable/Disable column in QTableView (Checkbox)
- Fixed issue when mode combo is not refreshed after editing modes
  in Setting Dialog